k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiki
  labels:
    istio-injection: disabled
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
